@@ -46,7 +46,6 @@ import org.apache.kafka.test.TestUtils;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -85,7 +84,7 @@ public class GetOffsetShellTest {
     }
 
     private void setUp() {
-        setupTopics(this::getTopicName, Collections.emptyMap());
+        setupTopics(this::getTopicName, Map.of());
         sendProducerRecords(this::getTopicName);
     }
 
@@ -139,7 +138,7 @@ public class GetOffsetShellTest {
         serverProperties.put(ServerLogConfigs.LOG_INITIAL_TASK_DELAY_MS_CONFIG, "100");
         serverProperties.put(RemoteLogManagerConfig.REMOTE_LOG_METADATA_MANAGER_LISTENER_NAME_PROP, "EXTERNAL");
 
-        return Collections.singletonList(
+        return List.of(
                 ClusterConfig.defaultBuilder()
                         .setTypes(Stream.of(KRAFT, CO_KRAFT).collect(Collectors.toSet()))
                         .setServerProperties(serverProperties)
@@ -257,7 +256,7 @@ public class GetOffsetShellTest {
         createConsumerAndPoll();
 
         List<Row> offsets = executeAndParse("--topic-partitions", "topic1:0,topic2:1,topic(3|4):2,__.*:3");
-        List<Row> expected = Arrays.asList(
+        List<Row> expected = List.of(
                 new Row("__consumer_offsets", 3, 0L),
                 new Row("topic1", 0, 1L),
                 new Row("topic2", 1, 2L),
@@ -274,7 +273,7 @@ public class GetOffsetShellTest {
 
         for (String time : new String[] {"-1", "latest"}) {
             List<Row> offsets = executeAndParse("--topic-partitions", "topic.*:0", "--time", time);
-            List<Row> expected = Arrays.asList(
+            List<Row> expected = List.of(
                     new Row("topic1", 0, 1L),
                     new Row("topic2", 0, 2L),
                     new Row("topic3", 0, 3L),
@@ -291,7 +290,7 @@ public class GetOffsetShellTest {
 
         for (String time : new String[] {"-2", "earliest"}) {
             List<Row> offsets = executeAndParse("--topic-partitions", "topic.*:0", "--time", time);
-            List<Row> expected = Arrays.asList(
+            List<Row> expected = List.of(
                     new Row("topic1", 0, 0L),
                     new Row("topic2", 0, 0L),
                     new Row("topic3", 0, 0L),
@@ -324,7 +323,7 @@ public class GetOffsetShellTest {
             // test topics disable remote log storage
             // as remote log disabled, broker return the same result as earliest offset
             TestUtils.waitForCondition(() ->
-                    Arrays.asList(
+                    List.of(
                             new Row("topic1", 0, 0L),
                             new Row("topic2", 0, 0L),
                             new Row("topic3", 0, 0L),
@@ -334,7 +333,7 @@ public class GetOffsetShellTest {
 
             // test topics enable remote log storage
             TestUtils.waitForCondition(() ->
-                    Arrays.asList(
+                    List.of(
                             new Row("topicRLS1", 0, 0L),
                             new Row("topicRLS2", 0, 1L),
                             new Row("topicRLS3", 0, 2L),
@@ -353,13 +352,13 @@ public class GetOffsetShellTest {
             // test topics disable remote log storage
             // as remote log not enabled, broker return unknown offset for each topic partition and these
             // unknown offsets are ignored by GetOffsetShell hence we have empty result here.
-            assertEquals(Collections.emptyList(),
+            assertEquals(List.of(),
                     executeAndParse("--topic-partitions", "topic\\d+:0", "--time", time));
 
             // test topics enable remote log storage
             // topicRLS1 has no result because there's no log segments being uploaded to the remote storage
             TestUtils.waitForCondition(() ->
-                    Arrays.asList(
+                    List.of(
                             new Row("topicRLS2", 0, 0L),
                             new Row("topicRLS3", 0, 1L),
                             new Row("topicRLS4", 0, 2L))
@@ -375,7 +374,7 @@ public class GetOffsetShellTest {
         String time = String.valueOf(System.currentTimeMillis() / 2);
 
         List<Row> offsets = executeAndParse("--topic-partitions", "topic.*:0", "--time", time);
-        List<Row> expected = Arrays.asList(
+        List<Row> expected = List.of(
                 new Row("topic1", 0, 0L),
                 new Row("topic2", 0, 0L),
                 new Row("topic3", 0, 0L),
@@ -401,7 +400,7 @@ public class GetOffsetShellTest {
         setUp();
 
         List<Row> offsets = executeAndParse("--topic-partitions", "topic1:0,topic2:1,topic(3|4):2,__.*:3", "--exclude-internal-topics");
-        List<Row> expected = Arrays.asList(
+        List<Row> expected = List.of(
                 new Row("topic1", 0, 1L),
                 new Row("topic2", 1, 2L),
                 new Row("topic3", 2, 3L),
@@ -419,7 +418,7 @@ public class GetOffsetShellTest {
 
         List<Row> offsets = executeAndParse("--topic-partitions", "__.*:0");
 
-        assertEquals(Arrays.asList(new Row("__consumer_offsets", 0, 0L)), offsets);
+        assertEquals(List.of(new Row("__consumer_offsets", 0, 0L)), offsets);
     }
 
     @ClusterTest
@@ -487,7 +486,7 @@ public class GetOffsetShellTest {
     private List<Row> expectedOffsetsWithInternal() {
         List<Row> consOffsets = IntStream.range(0, 4)
                 .mapToObj(i -> new Row("__consumer_offsets", i, 0L))
-                .collect(Collectors.toList());
+                .toList();
 
         return Stream.concat(consOffsets.stream(), expectedTestTopicOffsets().stream()).collect(Collectors.toList());
     }
@@ -519,7 +518,7 @@ public class GetOffsetShellTest {
     }
 
     private String[] addBootstrapServer(String... args) {
-        ArrayList<String> newArgs = new ArrayList<>(Arrays.asList(args));
+        ArrayList<String> newArgs = new ArrayList<>(List.of(args));
         newArgs.add("--bootstrap-server");
         newArgs.add(cluster.bootstrapServers());
 
